service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: tp
  labels:
    appName: service-1
spec:
  selector:
    appName: kubernetes-3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
