ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: tp
spec:
  rules:
  - host: kubernetes.audran
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-1
            port:
              number: 80
